# Real-Time-Decision-Engine

./: .gitignore  DEPLOY.md  DEPLOY_STEPS.md  Dockerfile  Dockerfile.worker  Makefile  README.md  WSL_LOCAL_RUN.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  frontend.html  gunicorn.conf.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_operator_and_canary.py  003_approvals_and_incidents.py  004_add_chain_hash_columns.py
app/: main.py
app/audit/: hash_chain.py  replay_engine.py  timeline_builder.py
app/backtesting/: engine.py
app/canary/: canary_router.py
app/circuit_breaker/: db_breaker.py
app/core/: auth.py  config.py  database.py  emergency_lockout.py  error_handlers.py  exceptions.py  idempotency.py  logging.py  metrics.py  middleware.py  rate_limiter.py  rbac.py  security.py
app/cost/: cost_tracker.py
app/dependencies/: auth.py  db.py
app/ml/: state_normalizer.py
app/models/: __init__.py  approval_request.py  decision_log.py  drift_event.py  environment_state.py  exploration_guard_log.py  incident.py  operator_event.py  policy_checkpoint.py  policy_version.py  reward_log.py  scaling_action.py
app/observability/: metrics_collector.py  structured_logger.py
app/operator/: confirmation_gate.py  kill_switch.py  manual_override.py
app/policies/: bandit_policy.py  base_policy.py  baseline_policy.py  rl_policy.py
app/repositories/: decision_repository.py  policy_repository.py
app/safety/: exploration_guard.py
app/schemas/: common.py  decision.py  policy.py  reward.py  state.py
app/services/: approval_service.py  decision_service.py  drift_service.py  explainability_service.py  policy_promoter.py  policy_service.py  reward_service.py  rollback_service.py  state_service.py
app/simulation/: workload_simulator.py
app/trust/: policy_trust_score.py
app/worker/: celery_app.py  tasks.py
app/workflow/: postmortem.py
docs/: ARCHITECTURE_V2.md
docs/adr/: ADR-001-policy-interface.md  ADR-002-dqn-over-ppo.md
frontend/: index.html
runbooks/: DRIFT_DETECTED.md  POLICY_ROLLBACK.md  SLA_BREACH.md
scripts/: wait_for_db.py
tests/: conftest.py
tests/benchmarks/: test_policy_benchmarks.py
tests/chaos/: test_chaos_injection.py  test_chaos_scenarios.py
tests/concurrency/: test_concurrent_decisions.py
tests/integration/: conftest.py  test_concurrent_locking.py  (+3 more)
(+39 files in other folders)
